--- a/src/styles/extends.less
+++ b/src/styles/extends.less
@@ -1,3 +1,12 @@
+@import '~antd/es/style/themes/default.less';
+@import '~antd/dist/antd.less'; // 引入官方提供的 less 样式入口文件
+
+
+@font-family: "PingFang SC"; // 字体家族
+@primary-color: rgb(45,153,255);
+@text-color: rgba(26, 25, 38, 1); // 主文本色
+@text-color-secondary: rgba(26, 25, 38, 0.65); // 次文本色
+
 .center_box {
   display: flex;
   justify-content: center;
