完成身份认证页的逻辑demo

--- a/src/styles/extends.less
+++ b/src/styles/extends.less
@@ -4,8 +4,8 @@
 
 @font-family: "PingFang SC"; // 字体家族
 @primary-color: rgb(45,153,255);
-@text-color: rgba(26, 25, 38, 1); // 主文本色
-@text-color-secondary: rgba(26, 25, 38, 0.65); // 次文本色
+@text-color:#1a1926; // 主文本色
+@text-color-secondary: #637085 // 次文本色
 
 .center_box {
   display: flex;
